fix: swagger docs update
