# router/router_api_key.go
@@ -23,14 +23,14 @@ import (
 )
 
 // getAllApiKeys godoc
-// @Tags         api_key
-// @Accept       json
-// @Produce      json
-// @Success      200  {object}  []domain.ApiKey
-// @Failure      400  {object}  RequestError
-// @Failure      404  {object}  RequestError
-// @Failure      500  {object}  RequestError
-// @Router       /api_keys/ [get]
+//	@Tags		api_key
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	[]domain.ApiKey
+//	@Failure	400	{object}	RequestError
+//	@Failure	404	{object}	RequestError
+//	@Failure	500	{object}	RequestError
+//	@Router		/api_keys/ [get]
 func getAllApiKeys(c *gin.Context) {
 	api_keys, err := ExtractApiKeyManager(c).Collection()
 	if err != nil {
@@ -44,14 +44,14 @@ func getAllApiKeys(c *gin.Context) {
 }
 
 // getApiKey godoc
-// @Tags         api_key
-// @Accept       json
-// @Produce      json
-// @Success      200  {object}  []domain.ApiKey
-// @Failure      400  {object}  RequestError
-// @Failure      404  {object}  RequestError
-// @Failure      500  {object}  RequestError
-// @Router       /api_keys/ [get]
+//	@Tags		api_key
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	[]domain.ApiKey
+//	@Failure	400	{object}	RequestError
+//	@Failure	404	{object}	RequestError
+//	@Failure	500	{object}	RequestError
+//	@Router		/api_keys/ [get]
 func getApiKey(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"api_key": ExtractApiKeyKey(c),
@@ -59,14 +59,14 @@ func getApiKey(c *gin.Context) {
 }
 
 // postCreateApiKey godoc
-// @Tags         api_key
-// @Accept       json
-// @Produce      json
-// @Param        apiKey  body  domain.ApiKey  true  "API Key Object"
-// @Success      201  {object}  domain.ApiKey
-// @Failure      400  {object}  RequestError
-// @Failure      500  {object}  RequestError
-// @Router       /api_keys/ [post]
+//	@Tags		api_key
+//	@Accept		json
+//	@Produce	json
+//	@Param		apiKey	body		domain.ApiKey	true	"API Key Object"
+//	@Success	201		{object}	domain.ApiKey
+//	@Failure	400		{object}	RequestError
+//	@Failure	500		{object}	RequestError
+//	@Router		/api_keys/ [post]
 func postCreateApiKey(c *gin.Context) {
 	var newApiKeyRequest domain.ApiKey
 	if err := c.BindJSON(&newApiKeyRequest); err != nil {
@@ -85,15 +85,15 @@ func postCreateApiKey(c *gin.Context) {
 }
 
 // deleteApiKey godoc
-// @Tags         api_key
-// @Accept       json
-// @Produce      json
-// @Param        key  path  string  true  "API Key Identifier"
-// @Success      204  "No Content"
-// @Failure      400  {object}  RequestError
-// @Failure      404  {object}  RequestError
-// @Failure      500  {object}  RequestError
-// @Router       /api_keys/{key} [delete]
+//	@Tags		api_key
+//	@Accept		json
+//	@Produce	json
+//	@Param		key	path	string	true	"API Key Identifier"
+//	@Success	204	"No Content"
+//	@Failure	400	{object}	RequestError
+//	@Failure	404	{object}	RequestError
+//	@Failure	500	{object}	RequestError
+//	@Router		/api_keys/{key} [delete]
 func deleteApiKey(c *gin.Context) {
 	api_key_key := ExtractApiKeyKey(c)
 	manager := ExtractApiKeyManager(c)
